# saao-publications-query

./: .gitignore  README.md  pyproject.toml  requirements.txt
java/: pom.xml
java/src/main/java/za/ac/saao/: KeywordSearch.java
java/src/main/java/za/ac/salt/: KeywordSearch.java
java/src/test/java/za/ac/saao/: KeywordSearchTest.java
java/src/test/java/za/ac/salt/: KeywordSearchTest.java
pubquery/: ads_queries.py  config.py  publications_query.py  wos_queries.py
python/: ads_queries.py  config.py  generate_publications_list.py  generate_publications_list_html.py  pdf_access.py  publications_query.py  wos_queries.py
