[project]
name = "publicationsquery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ads>=0.12.7",
    "beautifulsoup4>=4.14.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "typer>=0.20.0",
    "weasyprint>=66.0",
    "xlsxwriter>=3.2.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
